--- a/style.css
+++ b/style.css
@@ -167,6 +167,29 @@
   pointer-events: none;
 }
 
+
+.controls {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.middle {
+  display: flex;
+  gap: 10px;
+}
+
+.controls_btn {
+  width: 50px;
+  height: 50px;
+  font-size: 20px;
+  font-weight: bold;
+  border-radius: 8px;
+  border: none;
+  cursor: pointer;
+}
+
 /* ================= GAME OVER ================= */
 
 .game-over {
@@ -432,3 +455,7 @@
     padding: 5px 12px;
   }
 }
+
+
+
+
