--- a/style.css
+++ b/style.css
@@ -187,7 +187,8 @@
   font-size: 20px;
   font-weight: bold;
   border-radius: 8px;
-  /* border: none; */
+  margin-bottom: 8px;
+  margin-top: 8px;
   cursor: pointer;
 }
 
