--- a/frontend/style.css
+++ b/frontend/style.css
@@ -56,12 +56,34 @@ body{
   box-shadow: 0 0 12px rgba(153, 242, 200, 0.6);
   text-transform: uppercase;
   white-space: nowrap;
+  cursor: pointer;
+  position: relative;
 }
 
-/* GUEST MODE */
+
 .username::after {
-  content: "";
+  content: attr(data-tooltip);
+  position: absolute;
+  bottom: 120%;
+  left: 50%;
+  transform: translateX(-50%);
+  background: #111;
+  color: #fff;
+  padding: 6px 10px;
+  border-radius: 6px;
+  font-size: 12px;
+  white-space: nowrap;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.2s ease;
 }
+
+.username.active:hover::after {
+  opacity: 1;
+}
+
+
+
 
 /* SIGNED IN GLOW EFFECT */
 .username:not(:contains("Guest")) {
@@ -857,4 +879,164 @@ right:8px;
  align-items: center;
  justify-content: center;
  
+}
+
+/* ===== OVERLAY ===== */
+.mvp-overlay {
+  position: fixed;
+  inset: 0;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  z-index: 999;
+  opacity: 1;
+  transition: all 0.2s ease-in-out;
+}
+
+.mvp-overlay.active {
+  display: flex;
+
+}
+
+/* dark blur background */
+.mvp-overlay-backdrop {
+  position: absolute;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.75);
+  backdrop-filter: blur(6px);
+}
+
+/* ===== CARD WRAPPER ===== */
+.mvp-wrapper {
+  position: relative;
+  z-index: 2;
+}
+
+/* ===== CARD ===== */
+.mvp-card {
+  display: flex;
+  width: 920px;
+  height: 400px;
+  background: linear-gradient(135deg, #141414, #0b0b0b);
+  border: 4px solid #f5b400;
+  box-shadow: 0 0 40px rgba(245, 180, 0, 0.25);
+ 
+}
+
+/* ===== LEFT IMAGE ===== */
+.player-image {
+  width: 260px;
+  border: 4px solid #f5b400;
+ 
+ height: 300px;
+
+ 
+}
+
+.player-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* ===== RIGHT CONTENT ===== */
+.card-content {
+  flex: 1;
+  padding: 20px;
+  color: #fff;
+
+}
+
+/* TOP BAR */
+.top-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #f5b400;
+  font-weight: bold;
+}
+
+.subtitle {
+  color: #aaa;
+  font-size: 13px;
+}
+
+/* STATS */
+.stats-row {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 16px;
+  margin: 25px 0;
+}
+
+.stat {
+  border: 2px solid #f5b400;
+  text-align: center;
+}
+
+.value {
+  font-size: 20px;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60px;
+}
+
+.label {
+  font-size: 13px;
+  color: white;
+  letter-spacing: 1px;
+  border-bottom: 2px solid #f5b400;
+  display: flex;
+  justify-content: center;
+  padding: 6px;
+}
+
+/* PLAYER NAME */
+.player-name {
+  background: #f5b400;
+  color: #000;
+  padding: 10px;
+  width: fit-content;
+  font-weight: bold;
+  letter-spacing: 2px;
+  font-size: 20px;
+  width: 200px;
+  text-align: center;
+}
+.totalPoints {
+  background: #f5b400;
+  color: #000;
+  padding: 10px;
+  width: fit-content;
+  font-weight: bold;
+  letter-spacing: 2px;
+  font-size: 17px;
+  width: 200px;
+  text-align: center;
+}
+
+
+.image-container{
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 30px;
+}
+
+.player{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+.close-mvpOverlay {
+  font-size: 20px;
+  position: absolute;
+  right: 50px;
+  top: 30px;
+  z-index: 888;
+  cursor: pointer;
 }
